deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openthreatgrid
  labels:
    name: openthreatgrid
    app.kubernetes.io/part-of: openthreatgrid
